fixed nodeport services and converted http handler to gin
