# openapi.yaml
@@ -1,97 +1,97 @@
----
-openapi: 3.0.1
-info:
-  title: Generated API
-  description: |2-
-
-    Copyright 2025 Ehab Terra. Licensed under the Apache License 2.0. See LICENSE and NOTICE.
-  version: 1.0.0
-  contact:
-    name: Ehab
-    url: https://ehabterra.github.io/
-    email: ehabterra@hotmail.com
-  license:
-    name: ""
-paths:
-  /api/v1/gpus:
-    get:
-      tags:
-        - /api/v1
-      operationId: github.com/message-streaming-app/cmd/metrics.FuncLit:/Users/narinderkaur/codebase/go/src/github.com/narinder/message-streaming-app/cmd/metrics/main.go:48:20
-      parameters:
-        - name: string
-          in: query
-          schema:
-            type: string
-        - name: sort
-          in: query
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/github.com_gin-gonic_gin.H'
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/github.com_gin-gonic_gin.H'
-  /api/v1/gpus/{id}/telemetry:
-    get:
-      tags:
-        - /api/v1
-      operationId: github.com/message-streaming-app/cmd/metrics.FuncLit:/Users/narinderkaur/codebase/go/src/github.com/narinder/message-streaming-app/cmd/metrics/main.go:89:34
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: start_time
-          in: query
-          schema:
-            type: string
-        - name: end_time
-          in: query
-          schema:
-            type: string
-        - name: string
-          in: query
-          schema:
-            type: string
-        - name: sort
-          in: query
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/go.mongodb.org_mongo-driver_bson.M'
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/github.com_gin-gonic_gin.H'
-        "400":
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/github.com_gin-gonic_gin.H'
-        "500":
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/github.com_gin-gonic_gin.H'
 components:
   schemas:
     github.com_gin-gonic_gin.H:
       type: object
+info:
+  contact:
+    email: dummy@hotmail.com
+    name: Narinder Kaur
+    url: http://dummy.com
+  description: |2-
+
+    Copyright 2025 Ehab Terra. Licensed under the Apache License 2.0. See LICENSE and NOTICE.
+  license:
+    name: ""
+  title: Generated API
+  version: 1.0.0
+openapi: 3.1.1
+paths:
+  /api/v1/gpus:
+    get:
+      operationId: github.com/message-streaming-app/internal/metrics.FuncLit:/Users/narinderkaur/codebase/go/src/github.com/narinder-kaur/message-streaming-app/internal/metrics/gin_adapter.go:55:21
+      parameters:
+      - in: query
+        name: ""
+        schema:
+          type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                type: object
+          description: OK
+        default:
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: string
+                type: object
+          description: Status code could not be determined
+      tags:
+      - /api/v1
+  /api/v1/gpus/{id}/telemetry:
+    get:
+      operationId: github.com/message-streaming-app/internal/metrics.FuncLit:/Users/narinderkaur/codebase/go/src/github.com/narinder-kaur/message-streaming-app/internal/metrics/gin_adapter.go:60:35
+      parameters:
+      - in: query
+        name: ""
+        schema:
+          type: string
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: string
+        x-warning: This parameter is present in the path but not found in the code.
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                type: object
+          description: OK
+        default:
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: string
+                type: object
+          description: Status code could not be determined
+      tags:
+      - /api/v1
+  /healthz:
+    get:
+      operationId: github.com/message-streaming-app/internal/metrics.FuncLit:/Users/narinderkaur/codebase/go/src/github.com/narinder-kaur/message-streaming-app/internal/metrics/gin_adapter.go:65:28
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/github.com_gin-gonic_gin.H'
+          description: OK
+  /ready:
+    get:
+      operationId: github.com/message-streaming-app/internal/metrics.FuncLit:/Users/narinderkaur/codebase/go/src/github.com/narinder-kaur/message-streaming-app/internal/metrics/gin_adapter.go:66:26
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/github.com_gin-gonic_gin.H'
+          description: OK
+servers:
+- description: Localhost server
+  url: http://localhost:31002/
